Fixed horizontal scrolling issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,7 +48,7 @@ a {
 .license-box {
   background-color: darkgray;
   color: white;
-  margin: 0 0 2% 0;
+  margin: 0 2% 2% 2%;
   padding: 2% 0;
 }
 
